# finops-remediation-engine

./: .gitignore  CLAUDE.md  README.md  SUBMISSION.md  prompts.md  pyproject.toml
.claude/: settings.json
.claude/agents/: remediation-determinism-checker.md  remediation-safety-auditor.md  schema-sync-checker.md
.claude/hooks/: check-git-gate.ps1  mark-precommit-ok.ps1
.claude/rules/: layering.md  provider-neutral.md  python-conventions.md  remediation-determinism.md  remediation-safety.md  schema-canonical.md
.claude/skills/api-test/: SKILL.md
.claude/skills/pre-commit/: SKILL.md
.claude/skills/remediation-audit/: SKILL.md
app/: __init__.py  config.py  db.py  main.py
app/detectors/: __init__.py  engine.py  rules.py
app/modules/: __init__.py
app/modules/dashboard/: __init__.py  router.py  service.py
app/modules/findings/: __init__.py  router.py  schemas.py  service.py
app/modules/ingest/: __init__.py  router.py  schemas.py  service.py
app/modules/remediation/: __init__.py  router.py  schemas.py  service.py
app/providers/: __init__.py  base.py
app/providers/aws/: __init__.py  parser.py  (+2 more)
app/repos/: __init__.py  findings.py  ingest_runs.py  resources.py
db/: init_db.sql
docs/: deck.md
samples/: aws_billing.csv  aws_inventory.json
scripts/: check_docs_language.py  check_module_layering.py  check_python_strict.py  collect_aws_inventory.py  generate_report.py  init_db.py
static/: app.css
templates/: _findings_table.html  dashboard.html
tests/: conftest.py  test_api.py  test_detectors.py  test_parser.py  test_remediation.py
